Fixed Icon Not Working on Firefox

--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ h2 {
     height:100%;
 }
 
-.icon{
+.iconv{
     display: block;
     margin-left: auto;
     margin-right: auto;
